tests/snapshots/run_wpt_conformance__trtx_sign_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "sign.https.any.js",
    "sign float32 1D tensor",
    "trtx",
    Failed {
        msg: Some(
            "Failed to write tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")",
        ),
    },
)
