tests/snapshots/run_wpt_conformance__trtx_sign_int64_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sign.https.any.js",
    "sign int64 3D tensor",
    "trtx",
    "PASS",
)
