tests/snapshots/run_wpt_conformance__trtx_sign_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sign.https.any.js",
    "sign int8 4D tensor",
    "trtx",
    "PASS",
)
